--- a/app/src/main/res/layout/activity_manager_user.xml
+++ b/app/src/main/res/layout/activity_manager_user.xml
@@ -11,15 +11,22 @@
 
     <include layout="@layout/layout_title" />
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/refresh"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_manager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:tabIndicatorColor="@color/red"
+        app:tabTextColor="@color/text_black"
+        app:tabSelectedTextColor="@color/red">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    </android.support.design.widget.TabLayout>
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vpmanager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+    </android.support.v4.view.ViewPager>
+
 </LinearLayout>
